--- a/sam/index.html
+++ b/sam/index.html
@@ -1,11 +1,48 @@
 <!doctype html>
-<html lang="en">
+<html lang="nl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sam</title>
+
+    <meta
+      name="description"
+      content="SDICT ontwikkelt moderne, gebruiksvriendelijke en volledig op maat gemaakte websites en webapps. Van ontwerp tot livegang, alles wordt voor jou geregeld."
+    />
+    <meta
+      name="keywords"
+      content="SDICT, webontwikkeling, software developer, websites, webapps, maatwerk, hosting, ontwerp, webdesign"
+    />
+    <meta name="author" content="SDICT" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <!-- Open Graph / WhatsApp / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sdict.nl/" />
+    <meta property="og:title" content="SDICT — Websites & Webapps" />
+    <meta
+      property="og:description"
+      content="SDICT ontwikkelt moderne en gebruiksvriendelijke websites en webapps die volledig aansluiten op jouw wensen. Alles van ontwerp tot livegang wordt geregeld."
+    />
+    <meta property="og:image" content="https://sdict.nl/sdict.png" />
+    <meta property="og:site_name" content="SDICT" />
+
+
+    <!-- Structured Data (Google Rich Results) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "SDICT",
+        "url": "https://sdict.nl",
+        "logo": "https://sdict.nl/sdict.png",
+        "description": "SDICT ontwikkelt moderne en gebruiksvriendelijke websites en webapps op maat, van ontwerp tot livegang.",
+      }
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
