--- a/sam/index.html
+++ b/sam/index.html
@@ -38,7 +38,7 @@
         "name": "SDICT",
         "url": "https://sdict.nl",
         "logo": "https://sdict.nl/sdict.png",
-        "description": "SDICT ontwikkelt moderne en gebruiksvriendelijke websites en webapps op maat, van ontwerp tot livegang.",
+        "description": "SDICT ontwikkelt moderne en gebruiksvriendelijke websites en webapps op maat, van ontwerp tot livegang."
       }
     </script>
   </head>
